# BounceGIFCreator

./: .gitignore  CMakeLists.txt  README.md  computer.cpp  computer.h  geometry.cpp  geometry.h  image.cpp  image.h  main.cpp  point.h  screen.cpp  screen.h  triange.h  vector.cpp  vector.h
